added backend-common packages

--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -15,6 +15,10 @@
     "jsonwebtoken": "^9.0.2",
     "ws": "^8.18.3"
   },
+  "devDependencies": {
+    "@repo/backend-common": "workspace:*",
+    "@repo/common": "workspace:*"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
