--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@repo/typescript-config": "workspace:*",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "bcrypt": "^6.0.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2"
   },
